--- a/top/about.html
+++ b/top/about.html
@@ -2,32 +2,41 @@
 <html lang="en">
 
 <head>
-  <link href="../css/index.css" >
+  <link href="../css/index.css" rel="stylesheet" />
   <meta charset="UTF-8" />
-  <title>Solo Overnight</title>
-
+  <title>Day Trip with the Harriman Trail Challengers</title>
 </head>
+
 <body>
-  <div class="wrapper">
-  <div class="top-navbar">
-    <div><img src="./images/hiking-harriman.png" id="logo"></div>
-    <h1> Hiking in Harriman</h1>
-    <div><a href="about.html">About Me</a></div>
-  </div>
-  <div class="right-nav">
-    <entry class="blog-nav-top">Blog Archives</entry>
-    <entry class="blog-entry" id="blog1"><a href="./archive/blog1.html">Day Trip with the Harriman Trail Challengers</a></entry>
-    <entry class="blog-entry" id="blog2"><a href="./archive/blog2.html">Solo Overnight</a></entry>
-    <entry class="blog-entry" id="blog3"><a href="./archive/blog3.html">Through Hike from Tuxedo to Southfields</a></entry>
-  </div>
-<span id="main-about">
-  <h1>Hey there!</h1>
-  <h2>I'm Kyra, and I'm a hiker! </h2>
-  <h3>At least a wanna-be.</h3>
-  <p>So I haven't done any major weeks-long treks, but I have done some solo overnights. I took some classes on backpacking through REI, bought some gear, planned my trips, and away I went! And you know what the fun part is? <em>You can too!</em> Anyone can be a hiker. You just have to love walking around in nature and have an adventurous spirit. Come join me as we Hike in Harriman!</p>
- </span>
- <span id="image-about"></span>
+  <div class="blog-wrapper" id="about-wrapper">
+    <header class="blog-head">
+      <div>
+        <a href="../top/index.html">
+          <img src="../images/hiking-harriman.png" id="logo" /></a>
+      </div>
+      <h1>Hiking in Harriman</h1>
+      <div><a href="../blogs/blog1.html">To the blogs!</a></div>
+    </header>
+    <div class="about-main">
+      <article class="about-text">
+        <h1>Hey there!</h1>
+        <h2>I'm Kyra, and I'm a hiker!</h2>
+        <h3>At least a wanna-be.</h3>
+        <p>
+          So I haven't done any major weeks-long treks, but I have done some
+          solo overnights. I took some classes on backpacking through REI,
+          bought some gear, planned my trips, and away I went! And you know
+          what the fun part is? <em>You can too!</em> Anyone can be a hiker.
+          You just have to love walking around in nature and have an
+          adventurous spirit. Come join me as we Hike in Harriman!
+        </p>
+      </article>
+    </div>
   </div>
 
+  <footer>
+    <strong>Copyright 2023 HikinginHarriman.com </strong>
+  </footer>
 </body>
+
 </html>
