made responsive and added social media images

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -11,7 +11,7 @@
   <div class="blog-wrapper" id="blog1-wrapper">
     <header class="blog-head">
       <div>
-        <a href="../top/index.html"><img src="../images/harriman-logo.png" id="logo" /></a>
+        <a href="../index.html"><img src="../images/harriman-logo.png" alt="logo" id="logo" /></a>
       </div>
       <h1>Hiking in Harriman</h1>
       <div><a href="../top/about.html">About Me</a></div>
@@ -53,24 +53,30 @@
         <li>first aid kit</li>
         <li>phone charger</li>
         <li>mylar emergency blanket</li>
+      </ul>
 
-        </p>
-        <p> You should also know how to read blazes. There are more than 20 trails in Harriman State Park. When you
-          start hiking on a less-traveled path, it becomes necessary to always keep the blazes in sight. Think of
-          yourself as swinging on monkey bars when you were a kid, as soon as you release one bar, you are swinging
-          purposefully to the next. The blazes are your bars, always know where the next one is.
-          You need both a GPS map loaded on your phone and a physical map
-          -download Avenza + Harriman / Bear Mountain map set. It costs about $8.99 but the cost goes to the New York /
-          New Jersey Trail conference, who maintain the trails. Think of it as your one time entry fee.
-          The GPS is extremely useful, as it doesn't require cell service, and you can quickly find your way back to the
-          trail if you lost the blazes.
-          The backup map and compass are great on the high chance that your phone dies.
-        </p>
-        <summary>Try hiking with a group! you won't be dissapointed!</summary>
+      </p>
+      <p>
+      <figure><img src="../images/buddies.jpg" class="interior-image">
+        <figcaption>My buddies</figcaption>
+      </figure>
+      </p>
+      <p> You should also know how to read blazes. There are more than 20 trails in Harriman State Park. When you
+        start hiking on a less-traveled path, it becomes necessary to always keep the blazes in sight. Think of
+        yourself as swinging on monkey bars when you were a kid, as soon as you release one bar, you are swinging
+        purposefully to the next. The blazes are your bars, always know where the next one is.
+        You need both a GPS map loaded on your phone and a physical map
+        -download Avenza + Harriman / Bear Mountain map set. It costs about $8.99 but the cost goes to the New York /
+        New Jersey Trail conference, who maintain the trails. Think of it as your one time entry fee.
+        The GPS is extremely useful, as it doesn't require cell service, and you can quickly find your way back to the
+        trail if you lost the blazes.
+        The backup map and compass are great on the high chance that your phone dies.
+      </p>
+      <summary>Try hiking with a group! you won't be dissapointed!</summary>
     </article>
     <nav class="blog-links">
       <button class="previous">
-        <a href="../top/index.html">Previous</a>
+        <a href="../index.html">Previous</a>
       </button>
       <button class="next">
         <a href="./blog2.html">Next</a>
@@ -79,6 +85,8 @@
   </div>
   <footer>
     <strong>Copyright 2023 HikinginHarriman.com </strong>
+    <a href="http://www.facebook.com"><img src="../images/fbicon.jpeg" alt="facebook" id="fbicon" /></a>
+    <a href="http://www.instagram.com"><img src="../images/insta.jpeg" alt="instagram" id="instaicon" /></a>
   </footer>
 </body>
 
