--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -11,7 +11,7 @@
   <div class="blog-wrapper" id="blog2-wrapper">
     <header class="blog-head">
       <div>
-        <a href="../top/index.html"><img src="../images/harriman-logo.png" id="logo" /></a>
+        <a href="../index.html"><img src="../images/harriman-logo.png" alt="logo" id="logo" /></a>
       </div>
       <h1>Hiking in Harriman</h1>
       <div><a href="../top/about.html">About Me</a></div>
@@ -66,7 +66,14 @@
         That being said, some leak, some have mice, some have ticks, and some have other stinky hikers in them. So I'd
         recommend bringing a tent.
         Here's what <u>I</u> packed:
-        Think of it as bringing different rooms
+        Think of it as bringing different rooms.
+      </p>
+      <p>
+      <figure><img src="../images/stuff.jpg" class="interior-image">
+        <figcaption>Packing for the overnight!</figcaption>
+      </figure>
+      </p>
+      <p>
       <ul>
         <li>
           <b>Bedroom:</b> tent, sleeping bag, sleeping pad (yes you need this), lantern, camp pillow (optional)
@@ -98,6 +105,8 @@
   </div>
   <footer>
     <strong>Copyright 2023 HikinginHarriman.com </strong>
+    <a href="http://www.facebook.com"><img src="../images/fbicon.jpeg" alt="facebook" id="fbicon" /></a>
+    <a href="http://www.instagram.com"><img src="../images/insta.jpeg" alt="instagram" id="instaicon" /></a>
   </footer>
 </body>
 
