--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -11,7 +11,7 @@
   <div class="blog-wrapper" id="blog3-wrapper">
     <header class="blog-head">
       <div>
-        <a href="../top/index.html"><img src="../images/harriman-logo.png" id="logo" /></a>
+        <a href="../index.html"><img src="../images/harriman-logo.png" alt="logo" id="logo" /></a>
       </div>
       <h1>Hiking in Harriman</h1>
       <div><a href="../top/about.html">About Me</a></div>
@@ -37,27 +37,39 @@
         Camping overnight in Harriman State Park is a great way to disconnect from the hustle and bustle of daily life
         and reconnect with nature. This beautiful park located in New York state offers over 200 miles of hiking trails
         and 31 lakes and reservoirs, making it an excellent destination for outdoor enthusiasts.
-
+      </p>
+      <p>
         Before embarking on your camping trip, it's important to plan ahead and ensure that you have all the necessary
         gear. For our trip, we brought a tent, sleeping bags, a camping stove, and plenty of food and water. We also
         packed warm clothing as the temperatures at night can get quite chilly, even during the summer months.
-
+      </p>
+      <p>
         We decided to hike the Pine Meadow Trail, which is a 6.7-mile loop that takes you through some of the park's
         most scenic areas. The trail starts at the Pine Meadow Lake parking lot and takes you around the lake, over
         streams, and through dense forest. We were rewarded with stunning views of the lake and the surrounding
         mountains.
-
+      </p>
+      <p>
+      <figure><img src="../images/avenza.PNG" class="interior-image">
+        <figcaption>This is the map around the area!</figcaption>
+      </figure>
+      </p>
+      <p>
         After hiking for a few hours, we arrived at our campsite, which was located near Pine Meadow Lake. We set up our
         tent and cooked a hot meal on our camping stove. As the sun began to set, we gathered around the campfire and
         enjoyed the quiet sounds of nature.
+      </p>
+      <p>
 
         Unfortunately, something went wrong during the night. We had forgotten to properly store our food, and a group
         of raccoons managed to get into our cooler and eat all of our snacks. We learned our lesson and made sure to
         properly store our food for the remainder of the trip.
-
+      </p>
+      <p>
         The next day, we continued our hike on the Pine Meadow Trail and were treated to even more breathtaking views.
         We saw a variety of wildlife, including deer and a black bear in the distance.
-
+      </p>
+      <p>
         Overall, our camping trip to Harriman State Park was a wonderful experience. We were able to disconnect from
         technology and spend quality time with each other and nature. If you're looking for a great camping destination,
         Harriman State Park is definitely worth considering. Just remember to properly store your food to avoid any
@@ -70,12 +82,14 @@
         <a href="./blog2.html">Previous</a>
       </button>
       <button class="next">
-        <a href="../blog4.html">Next</a>
+        <a href="./blog4.html">Next</a>
       </button>
     </nav>
   </div>
   <footer>
     <strong>Copyright 2023 HikinginHarriman.com </strong>
+    <a href="http://www.facebook.com"><img src="../images/fbicon.jpeg" alt="facebook" id="fbicon" /></a>
+    <a href="http://www.instagram.com"><img src="../images/insta.jpeg" alt="instagram" id="instaicon" /></a>
   </footer>
 </body>
 
