--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -11,7 +11,7 @@
   <div class="blog-wrapper" id="blog4-wrapper">
     <header class="blog-head">
       <div>
-        <a href="../top/index.html"><img src="../images/harriman-logo.png" id="logo" /></a>
+        <a href="../index.html"><img src="../images/harriman-logo.png" alt="logo" id="logo" /></a>
       </div>
       <h1>Hiking in Harriman</h1>
       <div><a href="../top/about.html">About Me</a></div>
@@ -38,6 +38,11 @@
       </p>
       <p>I am happy to report this was 100% legit primitive camping, nothing for you but a patch of dirt where you could
         pitch a tent!</p>
+      <p>
+      <figure><img src="../images/kids-camping.jpg" class="interior-image">
+        <figcaption>This is the second day of the trip, and look! smiles!</figcaption>
+      </figure>
+      </p>
       <p>In order to plan, I took an overnight backpacking course with REI, and learned some things I wouldn’t have
         thought of. Then I tried that same route (Tuxedo station to Dutch Doctor shelter, about a 3 mile hike) without
         the kids , and realized it would be fine to bring them. Then I made a packing list and did a practice run of
@@ -53,12 +58,14 @@
         <a href="./blog3.html">Previous</a>
       </button>
       <button class="next">
-        <a href="../top/index.html">Next</a>
+        <a href="../index.html">Next</a>
       </button>
     </nav>
   </div>
   <footer>
     <strong>Copyright 2023 HikinginHarriman.com </strong>
+    <a href="http://www.facebook.com"><img src="../images/fbicon.jpeg" alt="facebook" id="fbicon" /></a>
+    <a href="http://www.instagram.com"><img src="../images/insta.jpeg" alt="instagram" id="instaicon" /></a>
   </footer>
 </body>
 
