--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link href="../css/index.css" rel="stylesheet" />
+  <link href="./css/index.css" rel="stylesheet" />
   <meta charset="UTF-8" />
   <title>Hiking in Harriman</title>
 </head>
@@ -10,23 +10,24 @@
 <body>
   <div class="wrapper">
     <div class="top-navbar">
-      <div><img src="../images/harriman-logo.png" id="logo" /></div>
+      <div><img src="./images/harriman-logo.png" id="logo" /></div>
       <h1>Hiking in Harriman</h1>
-      <div class="about"><a href="./about.html">About Me</a></div>
+      <div class="about"><a href="./top/about.html">About Me</a></div>
     </div>
     <div class="right-nav">
       <entry class="blog-nav-top">Blog Archives</entry>
-      <entry class="blog-entry"><a href="../blogs/blog1.html">Day Trip with the Harriman Trail
+      <entry class="blog-entry"><a href="./blogs/blog1.html">Day Trip with the Harriman Trail
           Challengers</a></entry>
-      <entry class="blog-entry"><a href="../blogs/blog2.html">Solo Overnight</a></entry>
-      <entry class="blog-entry"><a href="../blogs/blog3.html">Pine Meadow Lake</a> </entry>
+      <entry class="blog-entry"><a href="./blogs/blog2.html">Solo Overnight</a></entry>
+      <entry class="blog-entry"><a href="./blogs/blog3.html">Pine Meadow Lake</a> </entry>
 
-      <entry class="blog-entry"><a href="../blogs/blog4.html">Bringing the Kids</a> </entry>
-      <entry class="blog-entry"><a href="../blogs/blog5.html">Through Hike from Tuxedo to Southfields</a> </entry>
-      <entry class="blog-entry"><a href="../blogs/blog5.html">Through Hike from Tuxedo to Southfields</a> </entry>
-      <entry class="blog-entry"><a href="../blogs/blog5.html">Through Hike from Tuxedo to Southfields</a> </entry>
-      <entry class="blog-entry"><a href="../blogs/blog5.html">Through Hike from Tuxedo to Southfields</a> </entry>
-      <entry class="blog-entry"><a href="../blogs/blog5.html">Through Hike from Tuxedo to Southfields</a> </entry>
+      <entry class="blog-entry"><a href="./blogs/blog4.html">Bringing the Kids</a> </entry>
+      <entry class="blog-entry"><a href="./blogs/blog5.html">Placeholder Text</a> </entry>
+      <entry class="blog-entry"><a href="./blogs/blog5.html">Placeholder Text</a> </entry>
+      <entry class="blog-entry"><a href="./blogs/blog5.html">Placeholder Text</a> </entry>
+      <entry class="blog-entry"><a href="./blogs/blog5.html">Placeholder Text</a> </entry>
+      <entry class="blog-entry"><a href="./blogs/blog5.html">Placeholder Text</a> </entry>
+
     </div>
 
     <div class="card" id="card-1">What to Pack</div>
