--- a/top/about.html
+++ b/top/about.html
@@ -11,8 +11,8 @@
   <div class="blog-wrapper" id="about-wrapper">
     <header class="blog-head">
       <div>
-        <a href="../top/index.html">
-          <img src="../images/hiking-harriman.png" id="logo" /></a>
+        <a href="../index.html">
+          <img src="../images/hiking-harriman.png" alt="logo" id="logo" /></a>
       </div>
       <h1>Hiking in Harriman</h1>
       <div><a href="../blogs/blog1.html">To the blogs!</a></div>
@@ -36,6 +36,8 @@
 
   <footer>
     <strong>Copyright 2023 HikinginHarriman.com </strong>
+    <a href="http://www.facebook.com"><img src="../images/fbicon.jpeg" alt="facebook" id="fbicon" /></a>
+    <a href="http://www.instagram.com"><img src="../images/insta.jpeg" alt="instagram" id="instaicon" /></a>
   </footer>
 </body>
 
